--- a/.gitignore
+++ b/.gitignore
@@ -3,5 +3,6 @@ FreeFlighter/*.zip
 FreeFlighter/*.gbrjob
 FreeFlighter/*.drl
 FreeFlighter/*.ps
+FreeFlighter/*.xml
 FreeFlighter/fp-info-cache
 FreeFlighter/FreeFlighter-backups/
